# SGIS-Engine

./: .gitignore  CMakeLists.txt  README.md  buildEngine
shaders/: README.txt
shaders/glsl/: basic.frag  basicShader.frag  basicShader.vert  blinnPhong.frag  generic.vert
src/: AIComponent.hpp  AIComponentManager.cpp  AIComponentManager.hpp  AnimationComponent.cpp  AnimationComponent.hpp  AnimationComponentManager.hpp  AxisAlignedBB.cpp  AxisAlignedBB.hpp  BoxPhysicsObject.cpp  BoxPhysicsObject.hpp  CMakeLists.txt  Camera.cpp  Camera.hpp  CombinedGl.h  Component.hpp  ComponentManager.cpp  ComponentManager.hpp  DefaultCamera.hpp  DisplayEngine.cpp  DisplayEngine.hpp  Engine.cpp  Engine.hpp  EngineConfig.hpp  ExtraMath.cpp  ExtraMath.hpp  Font.hpp  FontManager.cpp  FontManager.hpp  GameInterface.hpp  GlMemoryManager.cpp  GlMemoryManager.hpp  GlModelLoader.cpp  GlModelLoader.hpp  GlRenderingEngine.cpp  GlRenderingEngine.hpp  GlShader.cpp  GlShader.hpp  GlShaderLoader.cpp  GlShaderLoader.hpp  GlTextureLoader.cpp  (+78 more)
src/Components/: AIComponent.hpp  AIComponentManager.cpp  AIManager.cpp  AIManager.hpp  AnimationComponent.cpp  AnimationComponent.hpp  AnimationComponentManager.hpp  AnimationManager.hpp  Component.hpp  ComponentManager.hpp  GuiComponent.hpp  GuiComponentManager.cpp  GuiComponentManager.hpp  GuiManager.cpp  GuiManager.hpp  PhysicsComponent.cpp  PhysicsComponent.hpp  PhysicsComponentManager.cpp  PhysicsComponentManager.hpp  PhysicsGhostObject.cpp  PhysicsGhostObject.hpp  PhysicsManager.cpp  PhysicsManager.hpp  PhysicsObject.cpp  RenderComponent.cpp  RenderComponent.hpp  RenderManager.cpp  RenderManager.hpp  TextComponent.cpp  TextComponent.hpp  UpdateComponent.cpp  UpdateComponent.hpp  UpdateManager.cpp  UpdateManager.hpp
src/Display/: Camera.hpp  DefaultCamera.hpp  DisplayEngine.cpp  DisplayEngine.hpp  Object.cpp  Object.hpp  ObjectPhysicsInterface.hpp  Screen.cpp  Screen.hpp  ScreenChangeEvent.hpp  WindowSizeEvent.hpp
src/Events/: Event.hpp  EventListener.hpp  EventQueue.cpp  EventQueue.hpp
src/GlRenderer/: GlMemoryManager.cpp  GlMemoryManager.hpp  GlModelLoader.cpp  GlRenderMeshObject.hpp  GlRenderingEngine.cpp  GlRenderingEngine.hpp  GlShader.cpp  GlShader.hpp  GlShaderLoader.cpp  GlShaderLoader.hpp  GlTextureLoader.cpp  GlTextureLoader.hpp  GlfwKeyTranslator.hpp  PhysDebRenderingEngine.cpp  PhysDebRenderingEngine.hpp  gl_core_4_1.c
src/Input/: GlfwKeyTranslator.cpp  GlfwKeyTranslator.hpp  InputEvent.hpp  InputMap.cpp  InputMap.hpp  InputMapSyncEvent.hpp  KeyList.hpp
src/Models/: Material.cpp  Material.hpp  Mesh.cpp  Mesh.hpp  MeshBuilder.cpp  MeshBuilder.hpp  Model.cpp  Model.hpp  ModelLoader.cpp  ModelLoader.hpp  ModelManager.cpp  ModelManager.hpp  Vertex.cpp  Vertex.hpp  VertexFormat.cpp  VertexFormat.hpp
src/Renderer/: Buffer.cpp  Buffer.hpp  GlfwInterface.cpp  GlfwInterface.hpp  MatrixStack.cpp  MemoryAllocator.cpp  MemoryAllocator.hpp  RenderInitializer.hpp  RendererMemoryManager.cpp  RendererMemoryManager.hpp  RenderingEngine.cpp  RenderingEngine.hpp  ShaderInfo.hpp  Std140Aligner.cpp  Std140Aligner.hpp  UniformSet.hpp  VertexBuffer.hpp  WindowSystemInterface.hpp
src/Renderer/Opengl/: CombinedGl.h  GlBuffer.hpp  GlMemoryManager.cpp  GlMemoryManager.hpp  GlRenderInitializer.hpp  GlRenderingEngine.cpp  GlRenderingEngine.hpp  GlShader.hpp  GlShaderLoader.cpp  GlShaderLoader.hpp  GlTextureLoader.cpp  GlTextureLoader.hpp  PhysDebRenderingEngine.cpp  PhysDebRenderingEngine.hpp  gl_core_4_1.c
src/Renderer/Opengl/glad/: glad.c  glad.h
src/Renderer/Vulkan/: VkBufferContainer.cpp  VkBufferContainer.hpp  VkExtensionFunctionLoader.hpp  VkImageData.cpp  VkMemoryManager.cpp  VkMemoryManager.hpp  VkPipelineCreateObject.cpp  VkPipelineCreateObject.hpp  VkRenderInitializer.cpp  VkRenderInitializer.hpp  VkRenderObjects.cpp  VkRenderingEngine.cpp  VkRenderingEngine.hpp  VkShader.cpp  VkShader.hpp  VkShaderLoader.cpp  VkTextureLoader.cpp
src/VkRenderer/: VkExtensionFuncDefs.cpp  VkExtensionFunctionLoader.hpp  VkImageData.cpp  VkImageData.hpp  VkMemoryManager.cpp  VkMemoryManager.hpp  VkObjectHandler.cpp  VkObjectHandler.hpp  VkPDPD.hpp  VkPipelineCreateObject.cpp  VkPipelineCreateObject.hpp  VkRenderInitializer.cpp  VkRenderInitializer.hpp  VkRenderObjects.cpp  VkRenderObjects.hpp  VkRenderingEngine.cpp  VkRenderingEngine.hpp  VkShader.cpp  VkShader.hpp  VkShaderLoader.cpp  VkShaderLoader.hpp  VkTextureLoader.cpp  VkTextureLoader.hpp
tests/: CMakeLists.txt  loggerOverheadTest.cpp  memAllocTest.cpp  vertexHashTest.cpp  vertexTest.cpp
tools/: KeyGenerator.cpp
